SockShopChart/templates/Ingress/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sockshop-ingress
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: sock.countyemi.site
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front-end
                port:
                  number: 80
    - host: grafana.countyemi.site
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: release1-grafana
                port:
                  number: 80
    - host: alert.countyemi.site
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: release1-prometheus-alertmanager
                port:
                  number: 80

  tls:
    - hosts:
        - sockshop.countyemi.site
        - grafana.countyemi.site
        - alert.countyemi.site
      secretName: tls-secret
